# some-random-projects

Section1_ResourceManagement/include/: Resource.hpp  ResourceManager.hpp  Time.hpp  TimeInterval.hpp
Section1_ResourceManagement/src/: Resource.cpp  ResourceManager.cpp  Time.cpp  TimeInterval.cpp  main.cpp
Section2_SmartBanking/: CMakeLists.txt
Section2_SmartBanking/include/: Account.hpp  BankSystem.hpp  Customer.hpp  Transaction.hpp
Section2_SmartBanking/src/: Account.cpp  BankSystem.cpp  Customer.cpp  Transaction.cpp  main.cpp
